--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,6 +6,18 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - vpn-gw.kube-ovn-operator.com
   resources:
   - vpngws
