--- a/bundle/manifests/vpn-gw.clusterserviceversion.yaml
+++ b/bundle/manifests/vpn-gw.clusterserviceversion.yaml
@@ -21,7 +21,7 @@ metadata:
         }
       ]
     capabilities: Basic Install
-    createdAt: "2023-06-02T09:17:39Z"
+    createdAt: "2023-06-03T10:02:34Z"
     operators.operatorframework.io/builder: operator-sdk-v1.28.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4-alpha
   name: vpn-gw.v0.0.1
@@ -48,6 +48,18 @@ spec:
     spec:
       clusterPermissions:
       - rules:
+        - apiGroups:
+          - apps
+          resources:
+          - deployments
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
         - apiGroups:
           - vpn-gw.kube-ovn-operator.com
           resources:
