change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Build artifacts
 /build
-/dist
+# /dist
 **/bin/
 
 # Test artifacts
@@ -61,7 +61,7 @@ tramp
 
 # cask packages
 .cask/
-dist/
+# dist/
 
 # Flycheck
 flycheck_*.el
