--- a/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -50,9 +50,6 @@ spec:
           spec:
             description: VpnGwSpec defines the desired state of VpnGw
             properties:
-              EnableIpsecVpn:
-                description: vpn gw enable ipsec vpn
-                type: boolean
               affinity:
                 description: vpn gw pod affinity
                 properties:
@@ -881,6 +878,9 @@ spec:
                         type: array
                     type: object
                 type: object
+              enableIpsecVpn:
+                description: vpn gw enable ipsec vpn
+                type: boolean
               enableSslVpn:
                 description: vpn gw enable ssl vpn
                 type: boolean
@@ -963,8 +963,8 @@ spec:
                   type: object
                 type: array
             required:
-            - EnableIpsecVpn
             - affinity
+            - enableIpsecVpn
             - enableSslVpn
             - ip
             - ipsecVpnImage
