--- a/Dockerfile.openvpn
+++ b/Dockerfile.openvpn
@@ -4,9 +4,11 @@
 FROM alpine:latest
 
 # Install needed packages
-RUN echo "http://dl-4.alpinelinux.org/alpine/edge/community/" >> /etc/apk/repositories && \
-    echo "http://dl-4.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && \
-    apk update && apk add openssl easy-rsa openvpn iptables bash && \
+
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
+
+RUN apk update && \
+    apk add openssl easy-rsa openvpn iptables bash && \
     rm -rf /tmp/* /var/tmp/* /var/cache/apk/* /var/cache/distfiles/*
 
 # Configure tun
