--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -902,7 +902,7 @@ spec:
               ovpnProto:
                 type: string
               ovpnSubnetCidr:
-                description: ovpn ssl vpn clinet server subnet cidr 10.240.0.0/255.255.0.0
+                description: ovpn ssl vpn clinet server subnet cidr 10.240.0.0/16
                 type: string
               replicas:
                 format: int32
@@ -914,9 +914,8 @@ spec:
                 type: array
               sslVpnImage:
                 description: if use kube-ovn default subnet, svc cidr probably is
-                  different, should be set pod svc cidr 10.96.0.0/255.240.0.0 OvpnSvcCidr
-                  string `json:"ovpnSslVpnSvcCidr"` ssl vpn server image, openvpn
-                  server
+                  different, should be set pod svc cidr 10.96.0.0/20 OvpnSvcCidr string
+                  `json:"ovpnSslVpnSvcCidr"` ssl vpn server image, openvpn server
                 type: string
               subnet:
                 description: pod subnet the vpn gw server pod running inside in this
