--- a/Dockerfile.strongSwan
+++ b/Dockerfile.strongSwan
@@ -13,3 +13,11 @@ RUN apk update && \
     apk add strongswan iptables quagga-nhrp bash && \
     rm -rf /tmp/* /var/tmp/* /var/cache/apk/* /var/cache/distfiles/*
 
+COPY dist/strongswan-setup /etc/strongswan/setup/
+RUN chmod +x /etc/strongswan/setup/*.sh
+RUN mkdir -p /etc/swanctl/x509 && \
+    mkdir -p /etc/swanctl/x509ca && \
+    mkdir -p /etc/swanctl/private
+
+
+
