--- a/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -878,6 +878,10 @@ spec:
                         type: array
                     type: object
                 type: object
+              cpu:
+                description: pod request limit cpu, memory 1 cpu at least 1G memory
+                  at least
+                type: string
               enableIpsecVpn:
                 description: vpn gw enable ipsec vpn
                 type: boolean
@@ -887,9 +891,16 @@ spec:
               ip:
                 description: vpn gw static ip
                 type: string
+              ipsecRemoteAddrs:
+                description: remote ipsec vpn server ips
+                type: string
+              ipsecRemoteTs:
+                description: remote ipsec vpn server subnet cidrs
+                type: string
               ipsecVpnImage:
-                description: ipsec use strongswan server all ipsec vpn spec start
-                  with ipsec
+                description: ipsec vpn server image, strongswan server
+                type: string
+              memory:
                 type: string
               ovpnCipher:
                 description: ssl vpn use openvpn server all ssl vpn spec start with
@@ -902,6 +913,9 @@ spec:
                 type: string
               ovpnSubnetCidr:
                 description: ovpn ssl vpn clinet server subnet cidr 10.240.0.0/16
+                type: string
+              qosBandwidth:
+                description: 1Mbps bandwidth at least
                 type: string
               replicas:
                 format: int32
@@ -962,14 +976,19 @@ spec:
                   type: object
                 type: array
             required:
+            - cpu
             - enableIpsecVpn
             - enableSslVpn
             - ip
+            - ipsecRemoteAddrs
+            - ipsecRemoteTs
             - ipsecVpnImage
+            - memory
             - ovpnCipher
             - ovpnPort
             - ovpnProto
             - ovpnSubnetCidr
+            - qosBandwidth
             - replicas
             - sslVpnImage
             - subnet
@@ -1875,13 +1894,21 @@ spec:
                   - type
                   type: object
                 type: array
+              cpu:
+                type: string
               enableIpsecVpn:
                 type: boolean
               enableSslVpn:
                 type: boolean
               ip:
                 type: string
+              ipsecRemoteAddrs:
+                type: string
+              ipsecRemoteTs:
+                type: string
               ipsecVpnImage:
+                type: string
+              memory:
                 type: string
               ovpnCipher:
                 type: string
@@ -1890,6 +1917,8 @@ spec:
               ovpnProto:
                 type: string
               ovpnSubnetCidr:
+                type: string
+              qosBandwidth:
                 type: string
               replicas:
                 format: int32
@@ -1942,14 +1971,19 @@ spec:
                   type: object
                 type: array
             required:
+            - cpu
             - enableIpsecVpn
             - enableSslVpn
             - ip
+            - ipsecRemoteAddrs
+            - ipsecRemoteTs
             - ipsecVpnImage
+            - memory
             - ovpnCipher
             - ovpnPort
             - ovpnProto
             - ovpnSubnetCidr
+            - qosBandwidth
             - replicas
             - sslVpnImage
             - subnet
