--- a/Dockerfile.openvpn
+++ b/Dockerfile.openvpn
@@ -8,7 +8,7 @@ FROM alpine:3.17.3
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
 
 RUN apk update && \
-    apk add openssl easy-rsa openvpn iptables bash && \
+    apk add openssl easy-rsa openvpn iptables tcpdump bash && \
     rm -rf /tmp/* /var/tmp/* /var/cache/apk/* /var/cache/distfiles/*
 
 # Configure tun
