--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -22,6 +22,9 @@ spec:
     - jsonPath: .status.ip
       name: IP
       type: string
+    - jsonPath: .status.publicIp
+      name: PublicIP
+      type: string
     - jsonPath: .status.sslVpnGwEnable
       name: SSLVPN
       type: string
@@ -915,6 +918,9 @@ spec:
               ovpnSubnetCidr:
                 description: ovpn ssl vpn clinet server subnet cidr 10.240.0.0/16
                 type: string
+              publicIp:
+                description: vpn gw static public ip, floating ip or router lb ip
+                type: string
               qosBandwidth:
                 description: 1Mbps bandwidth at least
                 type: string
@@ -989,6 +995,7 @@ spec:
             - ovpnPort
             - ovpnProto
             - ovpnSubnetCidr
+            - publicIp
             - qosBandwidth
             - replicas
             - sslVpnImage
@@ -1919,6 +1926,8 @@ spec:
                 type: string
               ovpnSubnetCidr:
                 type: string
+              publicIp:
+                type: string
               qosBandwidth:
                 type: string
               replicas:
@@ -1984,6 +1993,7 @@ spec:
             - ovpnPort
             - ovpnProto
             - ovpnSubnetCidr
+            - publicIp
             - qosBandwidth
             - replicas
             - sslVpnImage
