ipsec 基于 双网卡 进行测试

--- a/Dockerfile.strongSwan
+++ b/Dockerfile.strongSwan
@@ -1,17 +1,12 @@
 FROM ubuntu:22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt upgrade -y && apt install ca-certificates python3 hostname libunwind8 netbase \
-        ethtool iproute2 ncat libunbound-dev procps libatomic1 kmod iptables python3-netifaces python3-sortedcontainers \
-        tcpdump ipset curl uuid-runtime openssl inetutils-ping arping ndisc6 \
-        logrotate dnsutils net-tools strongswan strongswan-pki libcharon-extra-plugins \
-        libcharon-extauth-plugins libstrongswan-extra-plugins libstrongswan-standard-plugins -y --no-install-recommends && \
+RUN apt update && apt upgrade -y && apt install python3 hostname iproute2 ncat iptables tcpdump ipset curl openssl dnsutils net-tools charon-systemd -y && \
         rm -rf /var/lib/apt/lists/* && \
         rm -rf /etc/localtime
 
 RUN mkdir -p /ipsec.d/{cacerts,certs,private} && chmod 700 /ipsec.d
-
 COPY dist/strongswan-setup /
-RUN chmod +x configure.sh
+RUN chmod +x *.sh
 
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+# ENTRYPOINT ["/usr/bin/dumb-init", "--"]
