ipsec vpn cloud run and tunnel set up ok

--- a/Dockerfile.strongSwan
+++ b/Dockerfile.strongSwan
@@ -1,7 +1,7 @@
 FROM ubuntu:22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt upgrade -y && apt install python3 hostname tree iproute2 inetutils-ping arping ncat iptables tcpdump ipset curl openssl dnsutils net-tools charon-systemd -y && \
+RUN apt update && apt upgrade -y && apt install python3 hostname vim tree iproute2 inetutils-ping arping ncat iptables tcpdump ipset curl openssl dnsutils net-tools charon-systemd -y && \
         rm -rf /var/lib/apt/lists/* && \
         rm -rf /etc/localtime
 
@@ -9,7 +9,6 @@ RUN apt update && apt upgrade -y && apt install curl nodejs -y && \
         rm -rf /var/lib/apt/lists/* && \
         rm -rf /etc/localtime
 
-# RUN mkdir -p /ipsec.d/{cacerts,certs,private} && chmod 700 /ipsec.d
 COPY dist/strongswan-setup /
 RUN chmod +x *.sh
 
