--- a/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -903,11 +903,14 @@ spec:
               ipsecVpnImage:
                 description: ipsec vpn server image, strongswan server
                 type: string
+              ipsecVpnSecret:
+                description: ipsec vpn secret name, the secret should in the same
+                  namespace as the vpn gw
+                type: string
               memory:
                 type: string
               ovpnCipher:
-                description: ssl vpn use openvpn server all ssl vpn spec start with
-                  ovpn ovpn ssl vpn proto, udp or tcp, udp probably is better
+                description: ovpn ssl vpn proto, udp or tcp, udp probably is better
                 type: string
               ovpnPort:
                 description: ovpn ssl vpn port, default 1194 for udp, 443 for tcp
@@ -938,6 +941,10 @@ spec:
                 description: if use kube-ovn default subnet, svc cidr probably is
                   different, should be set pod svc cidr 10.96.0.0/20 OvpnSvcCidr string
                   `json:"ovpnSslVpnSvcCidr"` ssl vpn server image, openvpn server
+                type: string
+              sslVpnSecret:
+                description: ssl vpn secret name, the secret should in the same namespace
+                  as the vpn gw
                 type: string
               subnet:
                 description: pod subnet the vpn gw server pod running inside in this
@@ -993,6 +1000,7 @@ spec:
             - ipsecRemoteAddrs
             - ipsecRemoteTs
             - ipsecVpnImage
+            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -1003,6 +1011,7 @@ spec:
             - qosBandwidth
             - replicas
             - sslVpnImage
+            - sslVpnSecret
             - subnet
             type: object
           status:
@@ -1920,6 +1929,8 @@ spec:
                 type: string
               ipsecVpnImage:
                 type: string
+              ipsecVpnSecret:
+                type: string
               memory:
                 type: string
               ovpnCipher:
@@ -1944,6 +1955,8 @@ spec:
                   type: string
                 type: array
               sslVpnImage:
+                type: string
+              sslVpnSecret:
                 type: string
               subnet:
                 type: string
@@ -1994,6 +2007,7 @@ spec:
             - ipsecRemoteAddrs
             - ipsecRemoteTs
             - ipsecVpnImage
+            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -2004,6 +2018,7 @@ spec:
             - qosBandwidth
             - replicas
             - sslVpnImage
+            - sslVpnSecret
             - subnet
             type: object
         type: object
