--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -904,11 +904,14 @@ spec:
               ipsecVpnImage:
                 description: ipsec vpn server image, strongswan server
                 type: string
+              ipsecVpnSecret:
+                description: ipsec vpn secret name, the secret should in the same
+                  namespace as the vpn gw
+                type: string
               memory:
                 type: string
               ovpnCipher:
-                description: ssl vpn use openvpn server all ssl vpn spec start with
-                  ovpn ovpn ssl vpn proto, udp or tcp, udp probably is better
+                description: ovpn ssl vpn proto, udp or tcp, udp probably is better
                 type: string
               ovpnPort:
                 description: ovpn ssl vpn port, default 1194 for udp, 443 for tcp
@@ -939,6 +942,10 @@ spec:
                 description: if use kube-ovn default subnet, svc cidr probably is
                   different, should be set pod svc cidr 10.96.0.0/20 OvpnSvcCidr string
                   `json:"ovpnSslVpnSvcCidr"` ssl vpn server image, openvpn server
+                type: string
+              sslVpnSecret:
+                description: ssl vpn secret name, the secret should in the same namespace
+                  as the vpn gw
                 type: string
               subnet:
                 description: pod subnet the vpn gw server pod running inside in this
@@ -994,6 +1001,7 @@ spec:
             - ipsecRemoteAddrs
             - ipsecRemoteTs
             - ipsecVpnImage
+            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -1004,6 +1012,7 @@ spec:
             - qosBandwidth
             - replicas
             - sslVpnImage
+            - sslVpnSecret
             - subnet
             type: object
           status:
@@ -1921,6 +1930,8 @@ spec:
                 type: string
               ipsecVpnImage:
                 type: string
+              ipsecVpnSecret:
+                type: string
               memory:
                 type: string
               ovpnCipher:
@@ -1945,6 +1956,8 @@ spec:
                   type: string
                 type: array
               sslVpnImage:
+                type: string
+              sslVpnSecret:
                 type: string
               subnet:
                 type: string
@@ -1995,6 +2008,7 @@ spec:
             - ipsecRemoteAddrs
             - ipsecRemoteTs
             - ipsecVpnImage
+            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -2005,6 +2019,7 @@ spec:
             - qosBandwidth
             - replicas
             - sslVpnImage
+            - sslVpnSecret
             - subnet
             type: object
         type: object
