secret mount test pass

--- a/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/bundle/manifests/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -900,12 +900,12 @@ spec:
               ipsecRemoteTs:
                 description: remote ipsec vpn server subnet cidrs
                 type: string
-              ipsecVpnImage:
-                description: ipsec vpn server image, strongswan server
-                type: string
-              ipsecVpnSecret:
+              ipsecSecret:
                 description: ipsec vpn secret name, the secret should in the same
                   namespace as the vpn gw
+                type: string
+              ipsecVpnImage:
+                description: ipsec vpn server image, strongswan server
                 type: string
               memory:
                 type: string
@@ -937,14 +937,14 @@ spec:
                 items:
                   type: string
                 type: array
+              sslSecret:
+                description: ssl vpn secret name, the secret should in the same namespace
+                  as the vpn gw
+                type: string
               sslVpnImage:
                 description: if use kube-ovn default subnet, svc cidr probably is
                   different, should be set pod svc cidr 10.96.0.0/20 OvpnSvcCidr string
                   `json:"ovpnSslVpnSvcCidr"` ssl vpn server image, openvpn server
-                type: string
-              sslVpnSecret:
-                description: ssl vpn secret name, the secret should in the same namespace
-                  as the vpn gw
                 type: string
               subnet:
                 description: pod subnet the vpn gw server pod running inside in this
@@ -999,8 +999,8 @@ spec:
             - ip
             - ipsecRemoteAddrs
             - ipsecRemoteTs
+            - ipsecSecret
             - ipsecVpnImage
-            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -1010,8 +1010,8 @@ spec:
             - publicSubnet
             - qosBandwidth
             - replicas
+            - sslSecret
             - sslVpnImage
-            - sslVpnSecret
             - subnet
             type: object
           status:
@@ -1927,9 +1927,9 @@ spec:
                 type: string
               ipsecRemoteTs:
                 type: string
-              ipsecVpnImage:
+              ipsecSecret:
                 type: string
-              ipsecVpnSecret:
+              ipsecVpnImage:
                 type: string
               memory:
                 type: string
@@ -1954,9 +1954,9 @@ spec:
                 items:
                   type: string
                 type: array
-              sslVpnImage:
+              sslSecret:
                 type: string
-              sslVpnSecret:
+              sslVpnImage:
                 type: string
               subnet:
                 type: string
@@ -2006,8 +2006,8 @@ spec:
             - ip
             - ipsecRemoteAddrs
             - ipsecRemoteTs
+            - ipsecSecret
             - ipsecVpnImage
-            - ipsecVpnSecret
             - memory
             - ovpnCipher
             - ovpnPort
@@ -2017,8 +2017,8 @@ spec:
             - publicSubnet
             - qosBandwidth
             - replicas
+            - sslSecret
             - sslVpnImage
-            - sslVpnSecret
             - subnet
             type: object
         type: object
