--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -895,6 +895,10 @@ spec:
               ip:
                 description: vpn gw static ip
                 type: string
+              ipsecCaSecret:
+                description: ipsec vpn root ca secret name, the secret should in the
+                  same namespace as the vpn gw
+                type: string
               ipsecRemoteAddrs:
                 description: remote ipsec vpn server ips
                 type: string
@@ -1922,6 +1926,8 @@ spec:
                 type: boolean
               ip:
                 type: string
+              ipsecCaSecret:
+                type: string
               ipsecRemoteAddrs:
                 type: string
               ipsecRemoteTs:
@@ -2003,6 +2009,7 @@ spec:
             - enableIpsecVpn
             - enableSslVpn
             - ip
+            - ipsecCaSecret
             - ipsecRemoteAddrs
             - ipsecRemoteTs
             - ipsecSecret
